# openvino-x

./: README.md  addImages.cpp
MobileNet_openvino/: mobilenet_vino.py
dbnet/: README.MD  predict_openvino.sh
dbnet.pytorch/: README.MD
dbnet.pytorch/output/: vino.txt
dbnet.pytorch/tools/: predict_openvino.py
dbnet/output/: vino2.txt
download_model/models/intel/: index.md  intel_styles.css
download_model/models/intel/age-gender-recognition-retail-0013/: accuracy-check.yml  age-gender-recognition-retail-0013.prototxt  model.yml
download_model/models/intel/asl-recognition-0004/: accuracy-check.yml  model.yml
download_model/models/intel/bert-large-uncased-whole-word-masking-squad-0001/: model.yml
download_model/models/public/: index.md
download_model/tools/accuracy_checker/: .pylintrc  .yamllint  README.md  dataset_definitions.yml  pylint_checkers.py  requirements-core.in  requirements-test.in  requirements.in  setup.cfg  setup.py
download_model/tools/downloader/: README.md  caffe2_to_onnx.py  common.py  converter.py  downloader.py  info_dumper.py  pytorch_to_onnx.py  quantizer.py  requirements-caffe2.in  requirements-pytorch.in  requirements-tensorflow.in
openvino_cmake_demo/: CMakeLists.txt  main.cpp
yolov5/: main.cpp
yolov5-3_cpp_openvino/: README.md  detector.cpp  main.cpp
yolov5-4_openvino/: .gitignore  detect.py  tmpcmxv4myb
yolov5-4_openvino/models/: export.py
yolov5-4_openvino/script/: run.sh
yolov5-4_openvino/weights/: download_weights.sh
yolov5-4_openvino/yolov5-openvino/: common.py  run_openvino.cpp  run_openvino_v2.cpp
(+1109 files in other folders)
